--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,5 +3,6 @@
 @import 'global';
 @import 'input';
 @import 'content';
-@import "mediaqueries";
-@import "footer"
+@import 'togglesection';
+@import 'mediaqueries';
+@import 'footer';
