--- a/styles/sass/_input.scss
+++ b/styles/sass/_input.scss
@@ -12,7 +12,7 @@ button {
     border: solid 1px;
     border-radius: 0.2em;
     padding: 0.3em;
-    background-color: rgb(44, 44, 15);
+    background-color: lightgoldenrodyellow;
 }
 
 input {
